<resources>
    <string name="kronicle">Kronicle</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="email">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="guest">Continue as a Guest</string>

    <string name="or">OR</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>

    <!--Notes Strings-->
    <string name="notes">Notes</string>

    <!--Timer Strings-->
    <string name="timer">Timer</string>
    <string name="timer_title">Title</string>

    <string name="focus_timer">Focus</string>
    <string name="focus_time">2:00:00</string>

    <string name="short_break_timer">Short Break</string>
    <string name="short_break_time">3:00:00</string>

    <string name="long_break_timer">Long Break</string>
    <string name="long_break_time">4:00:00</string>
    <string name="repetition_before_long">Focus/Short Break Sessions before long break</string>

    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>

    <!--Timer Settings-->
    <string name="timer_settings">Timer Settings</string>

    <string name="timer_title_key">Timer Title Key</string>
    <string name="timer_title_summary">This sets the name of the Timer</string>
    <string name="timer_title_settings">Title for the Timer</string>


    <!--Habits Strings-->
    <string name="habits">Habits</string>


    <!--Settings-->
    <string name="general">General</string>


    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="exit_toast">Press BACK again to exit.</string>
    <string name="guest_toast">Account Created, Welcome Guest!</string>
    <string name="logout">Log Out</string>
    <string name="name">Name</string>

    <string name="cancel">Cancel</string>
    <string name="set">Set</string>

    <string name="submit">Submit</string>

    <string name="focus_timer_text">Focus Timer</string>
    <string name="timer_title_text">Timer Title</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="short_break_title">Short Break Timer</string>
    <string name="timer_long_break_text">Long Break Timer</string>
    <string name="sessions_long_break_text">Number of sessions before Long Break</string>



    <string name="notifications_new_message">New Message Notifications</string>
    <string name="key_notifications_new_message_ringtone">New Message Ringtone</string>
    <string name="summary_choose_ringtone">Choose Ringtone</string>
    <string name="pref_title_ringtone">Ringtone</string>


    <string name="key_vibrate">Vibrate</string>
    <string name="summary_vibrate">Summary Vibrate</string>
    <string name="title_vibrate">Title Vibrate</string>


    <string name="pref_header_about">About</string>


    <string name="summary_about">Kronicle is a timer and habit tracker that assists you by setting reminders for each habit
        and allowing you to track the amount of time you have spent working towards making them part of your routine.</string>


    <string name="app_version">Beta</string>
    <string name="title_version">Version</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="summary_support">Want to report a problem or tell us how we can improve your experience?</string>
    <string name="title_send_feedback">Send Feedback</string>

    <string name="choose_email_client">Email Client</string>

</resources>
