<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="Receive new Notifications" />
    </PreferenceCategory>

    <PreferenceCategory android:title="About">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Version">
        <Preference
            android:summary="@string/app_version" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_send_feedback">
        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"/>
    </PreferenceCategory>
</PreferenceScreen>