<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_drawer"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />
        <item
            android:id="@+id/my_account_drawer"
            android:icon="@drawable/icon_person"
            android:title="@string/my_account" />
        <item
            android:id="@+id/settings_drawer"
            android:icon="@drawable/icon_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/about_drawer"
            android:icon="@drawable/icon_info"
            android:title="@string/about" />
        <item
            android:id="@+id/logout_drawer"
            android:icon="@drawable/icon_logout"
            android:title="@string/logout" />
    </group>
</menu>