<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/linear_layout_style"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:elevation="5dp"
    android:padding="5dp"
    android:foreground="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/title_tri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timer_title"
        android:textAlignment="center"
        android:textColor="@color/colorBase"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/top_bar_tri"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/focus_text_tri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/focus_timer"
                android:textAlignment="center"
                android:textColor="@color/colorBase"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/focus_time_tri"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/focus_time"
                android:textAlignment="center"
                android:textColor="@color/colorComplement"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:id="@+id/bar_a"
            style="@style/Divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/short_break_text_tri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/short_break_timer"
                android:textAlignment="center"
                android:textColor="@color/colorBase"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/short_break_time_tri"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/short_break_time"
                android:textAlignment="center"
                android:textColor="@color/colorComplement"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:id="@+id/bar_b"
            style="@style/Divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/long_break_text_tri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_break_timer"
                android:textAlignment="center"
                android:textColor="@color/colorBase"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/long_break_time_tri"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/long_break_time"
                android:textAlignment="center"
                android:textColor="@color/colorComplement"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>