<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timer.TimerDisplay">


    <View
        android:id="@+id/top_bar_tri"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tri" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar_tri">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/focus_text_tri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/focus_timer"
                android:textAlignment="center"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/focus_time_tri"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/focus_time"
                android:textAlignment="center"
                android:textColor="@color/colorComplement"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:id="@+id/bar_a"
            style="@style/Divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/short_break_text_tri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/short_break_timer"
                android:textAlignment="center"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/short_break_time_tri"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/short_break_time"
                android:textAlignment="center"
                android:textColor="@color/colorComplement"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:id="@+id/bar_b"
            style="@style/Divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/long_break_text_tri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_break_timer"
                android:textAlignment="center"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/long_break_time_tri"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/long_break_time"
                android:textAlignment="center"
                android:textColor="@color/colorComplement"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/title_tri"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/timer_title"
        android:textAlignment="center"
        android:textColor="@color/colorBase"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>